packages/compiler/tests/compile/yaml/errors/malformed_object.t/run.t
Objet YAML malformé

  $ publicodes compile input.publicodes
  error[E001]: Impossible de déclarer un objet à cet endroit
  [2]
